srcMyCoreApp/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__ChangeType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChangeType__c</fullName>
    <description>This indicates the type of Change. It can either be Offer, Pricing, Hierarchy. Example of &apos;Offer&apos; change is : Change in Name, description, attribute etc.</description>
    <label>ChangeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>offer</fullName>
                <default>true</default>
                <label>offer</label>
            </value>
            <value>
                <fullName>hierarchy</fullName>
            </value>
            <value>
                <fullName>pricing</fullName>
            </value>
            <value>
                <fullName>context</fullName>
            </value>
            <value>
                <fullName>promotionWrapper</fullName>
            </value>
            <value>
                <fullName>simpleOffer</fullName>
            </value>
            <value>
                <fullName>availability</fullName>
            </value>
            <value>
                <fullName>basket</fullName>
            </value>
            <value>
                <fullName>ancestors</fullName>
            </value>
            <value>
                <fullName>containsItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>