srcMyCoreApp/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__IsProcessedByPC__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsProcessedByPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Processed by Platform Cache update job.</description>
    <label>Is Processed By Platform Cache</label>
    <type>Checkbox</type>
</CustomField>